Selected date is parsed from field, field validation, sdf bug fix (index out of bounds), CSS classes for field
git-svn-id: file:///home/igor/dev/stuff/svnbackup/trunk@796 ef7698a4-5110-0410-9fc6-c7eb3693863f

--- a/wicket-contrib-datepicker/src/css/calendar.css
+++ b/wicket-contrib-datepicker/src/css/calendar.css
@@ -117,3 +117,12 @@
 	vertical-align: middle;
 	text-align: center;
 }
+
+input.wicket-calendarField {
+	border: 1px solid black;
+	width: 70px; /* TODO:  calculate this with manual fontmetrics */
+}
+
+input.wicket-calendarField.wicket-invalid {
+	background-color: #FF6666;
+}
